Added PRINTER_NAME to the default config file.

--- a/settings.py.DIST
+++ b/settings.py.DIST
@@ -3,6 +3,15 @@
 #
 
 #
+# PRINTER_NAME -
+#       Set the cups printer name of a local printer for printing 
+#       medical records.
+#
+#
+
+PRINTER_NAME = None
+
+#
 # DEBUG -
 #       set debug mode on?
 #
