reverted old work-arounds to support EuDate in favor of DJANGO built-in locale support.

--- a/settings.py.DIST
+++ b/settings.py.DIST
@@ -66,9 +66,16 @@ DATABASE_PORT = ''             # Set to empty string for default.
 # system time zone.
 TIME_ZONE = 'America/Chicago'
 
+# TIME / DATE FORMATS
+#
+#
+
+USE_L10N = True
+
+
 # Language code for this installation. All choices can be found here:
 # http://www.i18nguy.com/unicode/language-identifiers.html
-LANGUAGE_CODE = 'en-us'
+# LANGUAGE_CODE = 'en-us'
 
 SITE_ID = 1
 
@@ -115,6 +122,7 @@ TEMPLATE_CONTEXT_PROCESSORS = (
 MIDDLEWARE_CLASSES = (
     'django.middleware.common.CommonMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
+    'django.middleware.locale.LocaleMiddleware',
     'django.contrib.auth.middleware.AuthenticationMiddleware',
 )
 
