--- a/doc/dot/Makefile
+++ b/doc/dot/Makefile
@@ -2,8 +2,8 @@ all: ocemr.png ocemr.pdf
 
 clean:
 	rm ocemr.dot ocemr.png ocemr.pdf
-ocemr.dot: ../models.py
-	( cd ..; python modelviz.8.py ocemr > doc/ocemr.dot )
+ocemr.dot: ../../models.py
+	( cd ../..; python modelviz.8.py ocemr > doc/dot/ocemr.dot )
 ocemr.png: ocemr.dot
 	dot ocemr.dot -Tpng -o ocemr.png
 ocemr.pdf: ocemr.dot
