added utils and contrib (source-data)

--- a/settings.py.DIST
+++ b/settings.py.DIST
@@ -36,7 +36,8 @@ SERVER_EMAIL = 'ocemr@example.com'
 #
 #
 
-APP_PATH="/usr/share/ocemr/app/ocemr"
+APP_PATH="/usr/share/ocemr/apps/ocemr"
+CONTRIB_PATH="/usr/share/ocemr/contrib"
 
 #
 # DATABASE_ENGINE -
