--- a/source_data/Makefile
+++ b/source_data/Makefile
@@ -4,4 +4,5 @@ all:
 	-echo nothing to do
 install:
 	install -m 755 -d $(DESTDIR)$(SHARE)/contrib/source_data
-	install -m 755 *.csv $(DESTDIR)$(SHARE)/contrib/source_data
+	install -m 644 *.csv $(DESTDIR)$(SHARE)/contrib/source_data
+	install -m 644 gpg_server_key.options $(DESTDIR)$(SHARE)/contrib
