--- a/settings.py.DIST
+++ b/settings.py.DIST
@@ -2,8 +2,6 @@
 # OCEMR - settings.py
 #
 
-DB_BACKUP_ENCRYPT=False
-DB_BACKUP_ENCRYPT_TO=""
 
 #
 # DEBUG -
@@ -54,11 +52,8 @@ DATABASE_ENGINE = 'sqlite3'
 # DATABASE_NAME -
 #       database name OR path to database file if using sqlite3.
 #
-# DATABASE_NAME = 'ocemr'
-# DATABASE_NAME = '/home/user/ocemr.db'
-#
 
-DATABASE_NAME = '/var/lib/ocemr/ocemr.db'
+DATABASE_NAME = '/var/lib/ocemr/db/ocemr.db'
 
 #
 # DATABASE_* -
@@ -70,6 +65,12 @@ DATABASE_PASSWORD = ''
 DATABASE_HOST = ''             # Set to empty string for localhost.
 DATABASE_PORT = ''             # Set to empty string for default.
 
+#
+# DB_BACKUP_*
+#
+
+DB_BACKUP_ENCRYPT=False
+DB_BACKUP_ENCRYPT_TO=( "ocemr@localhost" )
 
 #
 # OCEMR PRINTER SETTINGS
