bugfix in sycdb auto-update code
when calling syncdb from a dev environment, the hardcoded path to
utils dir didn't cut it. add a setting and pass the setting (via
the environment) to the update shell script.

--- a/settings.py.DIST
+++ b/settings.py.DIST
@@ -57,6 +57,7 @@ SERVER_EMAIL = 'ocemr@example.com'
 #
 APP_PATH="/usr/share/ocemr/apps/ocemr"
 CONTRIB_PATH="/usr/share/ocemr/contrib"
+UTIL_PATH="/usr/share/ocemr/util"
 VAR_PATH="/var/lib/ocemr"
 
 #
