--- a/util/Makefile
+++ b/util/Makefile
@@ -1,6 +1,6 @@
 include ../makefile.defines
 
-UTILS=dump_anon_data.py \
+UTILS=dump_anon_data.py setup_gpg_server_key.sh \
 	import_dx_csv.py import_examnotes_csv.py import_labs_csv.py \
 	import_rx_csv.py import_symptom_csv.py import_test_patients_csv.py \
 	import_vital_csv.py import_vacs_csv.py \
