--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python-django, python-sqlite,
  python-matplotlib, python-mysqldb,
  apache2, libapache2-mod-python,
- cups, enscript, gnupg, sqlite3
+ cups, enscript, gnupg, sqlite3, bzip2
 Recommends: mysql-server, mysql-client
 Description: Open Clinic Electonic Medical Records
  OCEMR is a web based electronic medical records system designed for the
