--- a/ocemr/settings.py.DIST
+++ b/ocemr/settings.py.DIST
@@ -8,16 +8,16 @@
 DATABASES = { }
 
 # sqlite3 example
-#DATABASES = {
-#	'default': {
-#		'ENGINE': 'django.db.backends.sqlite3',
-#		'NAME': '/home/phil/var/lib/ocemr.db',
-#		'USER': '',
-#		'PASSWORD': '',
-#		'HOST': '',
-#		'PORT': '',
-#		}
-#	}
+DATABASES = {
+	'default': {
+		'ENGINE': 'django.db.backends.sqlite3',
+		'NAME': '/home/elektron/var/lib/ocemr.db',
+		'USER': '',
+		'PASSWORD': '',
+		'HOST': '',
+		'PORT': '',
+		}
+	}
 
 # mysql example
 #DATABASES = {
@@ -51,8 +51,7 @@ DB_BACKUP_ENCRYPT_TO=[ "ocemr@localhost" ]
 #	Set DEBUG = True in development
 #
 
-DEBUG = False
-TEMPLATE_DEBUG = DEBUG
+DEBUG = True
 
 # ADMINS-
 #         Set name and email addresses of administrators. Site error reports
@@ -70,10 +69,10 @@ SERVER_EMAIL = 'ocemr@example.com'
 # *_PATH -
 #       Location the software is installed.
 #
-APP_PATH="/usr/share/ocemr/apps/ocemr"
-CONTRIB_PATH="/usr/share/ocemr/contrib"
-UTIL_PATH="/usr/share/ocemr/util"
-VAR_PATH="/var/lib/ocemr"
+APP_PATH="/home/elektron/code/ocemr"
+CONTRIB_PATH="/home/elektron/code/ocemr/contrib"
+UTIL_PATH="/home/elektron/code/ocemr/util"
+VAR_PATH="/home/elektron/var/ocemr"
 
 #
 # OCEMR PRINTER SETTINGS
@@ -119,12 +118,24 @@ USE_I18N = True
 MEDIA_ROOT = ''
 MEDIA_URL = ''
 ADMIN_MEDIA_PREFIX = '/media/admin/'
-TEMPLATE_CONTEXT_PROCESSORS = (
-    "django.core.context_processors.debug",
-    "django.core.context_processors.i18n",
-    "django.core.context_processors.request",
-    "django.contrib.auth.context_processors.auth",
-)
+TEMPLATES = [
+    {
+        'BACKEND': 'django.template.backends.django.DjangoTemplates',
+        'DIRS': [],
+        'APP_DIRS': True,
+        'OPTIONS': {
+            'context_processors': [
+                'django.template.context_processors.debug',
+                'django.template.context_processors.i18n',
+                'django.template.context_processors.request',
+                'django.contrib.auth.context_processors.auth',
+                'django.contrib.messages.context_processors.messages',
+            ],
+        },
+	'DEBUG': DEBUG,
+    },
+]
+
 MIDDLEWARE_CLASSES = (
     'django.middleware.common.CommonMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
@@ -133,7 +144,6 @@ MIDDLEWARE_CLASSES = (
 )
 ROOT_URLCONF = 'ocemr.urls'
 FORMAT_MODULE_PATH='ocemr.formats'
-TEMPLATE_DIRS = ()
 INSTALLED_APPS = (
     'django.contrib.auth',
     'django.contrib.contenttypes',
