update static media serving

--- a/ocemr/settings.py.DIST
+++ b/ocemr/settings.py.DIST
@@ -115,11 +115,7 @@ USE_L10N = True
 # LANGUAGE_CODE = 'en-us'
 SITE_ID = 1
 USE_I18N = True
-MEDIA_ROOT = ''
-MEDIA_URL = ''
-ADMIN_MEDIA_PREFIX = '/media/admin/'
 STATIC_URL = '/media/ocemr/'
-STATIC_ROOT = APP_PATH+'/static_media/'
 TEMPLATES = [
     {
     'BACKEND': 'django.template.backends.django.DjangoTemplates',
@@ -142,6 +138,7 @@ MIDDLEWARE_CLASSES = (
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.middleware.locale.LocaleMiddleware',
     'django.contrib.auth.middleware.AuthenticationMiddleware',
+    'django.contrib.messages.middleware.MessageMiddleware',
 )
 ROOT_URLCONF = 'ocemr.urls'
 FORMAT_MODULE_PATH='ocemr.formats'
@@ -152,6 +149,7 @@ INSTALLED_APPS = (
     'django.contrib.sites',
     'django.contrib.admin',
     'django.contrib.admindocs',
+    'django.contrib.staticfiles',
     'ocemr',
 )
 
