--- a/package_configs/conf/ocemr.conf
+++ b/package_configs/conf/ocemr.conf
@@ -1,2 +1,12 @@
 WSGIScriptAlias / /usr/share/ocemr/apps/ocemr/wsgi.py
 WSGIPythonPath /usr/share/ocemr/apps
+
+# Serve static media
+
+<Directory /usr/share/ocemr/www>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride None
+        Order allow,deny
+        allow from all
+</Directory>
+Alias /media  /usr/share/ocemr/www/media
