--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Package: ocemr
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python-django, python-sqlite,
  python-matplotlib, python-mysqldb, python-enchant, python-pymysql,
- apache2, libapache2-mod-wsgi,
+ apache2, libapache2-mod-wsgi, python-simplejson,
  cups, enscript, gnupg, sqlite3, bzip2
 Recommends: mysql-server, mysql-client
 Description: Open Clinic Electonic Medical Records
