--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ocemr
 Section: misc
 Priority: extra
 Maintainer: Philip J Freeman <philip.freeman@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), python-all, dh-python, python2.7
+Build-Depends: debhelper (>= 9), python-all, dh-python, python2.7
 Standards-Version: 3.9.1
 Homepage: http://kremlor.net/projects/ocemr
 #Vcs-Git: git://git.debian.org/collab-maint/ocemr.git
