--- a/package_configs/conf/ocemr.conf
+++ b/package_configs/conf/ocemr.conf
@@ -6,7 +6,6 @@ WSGIPythonPath /usr/share/ocemr/apps
 <Directory /usr/share/ocemr/www>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride None
-        Order allow,deny
-        allow from all
+        Require all granted
 </Directory>
 Alias /media  /usr/share/ocemr/www/media
