--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Depends: ${python:Depends}, ${misc:Depends}, python-django, python-sqlite,
  python-matplotlib, python-mysqldb, python-enchant, python-pymysql,
  apache2, libapache2-mod-wsgi, python-simplejson, python-reportlab,
  cups, enscript, gnupg, sqlite3, bzip2
-Recommends: mysql-server, mysql-client
+Recommends: mariadb-server, mariadb-client
 Description: Open Clinic Electonic Medical Records
  OCEMR is a web based electronic medical records system designed for the
  clinic environment. Designed for small clinics in rural parts of the world,
